tests/baselines/reference/genericRestArity.errors.txt
tests/cases/conformance/types/rest/genericRestArity.ts(7,1): error TS2554: Expected 3 arguments, but got 1.
tests/cases/conformance/types/rest/genericRestArity.ts(8,1): error TS2554: Expected 3 arguments, but got 8.


==== tests/cases/conformance/types/rest/genericRestArity.ts (2 errors) ====
    // Repro from #25559
    
    declare function call<TS extends unknown[]>(
        handler: (...args: TS) => void,
        ...args: TS): void;
      
    call((x: number, y: number) => x + y);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 3 arguments, but got 1.
    call((x: number, y: number) => x + y, 1, 2, 3, 4, 5, 6, 7);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 3 arguments, but got 8.
    